sanger/sites/neuroblastoma-cell-atlas/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neuroblastoma-cell-atlas
  labels:
    app: neuroblastoma-cell-atlas
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http
  selector:
    app: neuroblastoma-cell-atlas
---
apiVersion: v1
kind: Service
metadata:
  name: neuroblastoma-cell-atlas-all
  labels:
    app: neuroblastoma-cell-atlas-all
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: neuroblastoma-cell-atlas-all
---
apiVersion: v1
kind: Service
metadata:
  name: neuroblastoma-cell-atlas-gosh
  labels:
    app: neuroblastoma-cell-atlas-gosh
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: neuroblastoma-cell-atlas-gosh
---
apiVersion: v1
kind: Service
metadata:
  name: neuroblastoma-cell-atlas-pmc
  labels:
    app: neuroblastoma-cell-atlas-pmc
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: neuroblastoma-cell-atlas-pmc
---
